# rust-flights

./: Cargo.toml  README.md  build.rs  flights.proto
examples/: basic_search.rs  city_search_demo.rs  time_window_example.rs  wikidata_benchmark.rs
src/: city_cache.json  client.rs  lib.rs  main.rs  mcp_server.rs  protobuf.rs  wikidata.rs
tests/: integration_tests.rs
